# localstack-terraform-test

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  build.py  conftest.py  constants.py  docker-compose.yml  get-services.py  localstack-tests.excl.txt  localstack-tests.incl.txt  localstack-tests.incl.yml  main.py  patch.py  pyproject.toml  pytest.ini  requirements.txt  run-fail-fast.sh  utils.py
.circleci/: config.yml  test.yml
.github/workflows/: lint.yml  main.yml  plugin-patch.yml
collect-raw-metric-data-extension/: Makefile  README.md  setup.cfg
collect-raw-metric-data-extension/collect_raw_metric_data_extension/: __init__.py  extension.py
collect-raw-metric-data-extension/collect_raw_metric_data_extension.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
etc/: 0001-add-simple-hardcoded-configuration-for-running-tests.patch  0002-hardcode-local-endpoints.patch  0002-route53-reduce-sync-time.patch  0003-route53-reduce-sync-time.patch  001-hardcode-endpoint.patch
terraform_pytest/: constants.py  get-services.py  get-tests-for-partitions.py  get-tf-partitions.py  get_services.py  get_tf_partitions.py  main.py  service-partitions.yml  utils.py
terratest/: dynamo_db_table_creation_test.go  go.mod  go.sum  main_test.go  terraform_aws_hello_world_example_test.go  test_utils.go
terratest/dynamo-db-table-creation/: main.tf  variables.tf
terratest/dynamodb/: dynamo_db_table_creation_test.go
tests/: conftest.py  generator.py  lister.py  runner.py
(+2 files in other folders)
