[metadata]
name = collect-raw-metric-data-extension
version = 0.1.0
url = https://github.com/-/collect-raw-metric-data-extension
author = LocalStack Test
author_email = stefanie.plieschnegger@localstack.cloud
description = All the boilerplate you need to create a LocalStack extension.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0

[options.entry_points]
localstack.extensions =
    collect-raw-metric-data-extension = collect_raw_metric_data_extension.extension:MyExtension
